--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.3",
+    "redis": "^4.7.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
